# data-science-portfolio

./: PROJECT_TEMPLATE.md  README.md  ROADMAP.md
.github/workflows/: robotic-warehouse-des-ci.yml
projects/multi-agent-robot-fleet-optimization/: README.md
projects/order-picking-batching-routing-optimization/: README.md
projects/robotic-warehouse-simpy-simulation/: README.md  pyproject.toml  requirements.txt
projects/robotic-warehouse-simpy-simulation/app/: streamlit_app.py
projects/robotic-warehouse-simpy-simulation/data/sample/: historical_kpis.csv  kaggle_style_event_log.csv
projects/robotic-warehouse-simpy-simulation/docs/: digital_twin_enhancements.md  experiment_protocol.md  model_design.md  validation_plan.md
projects/robotic-warehouse-simpy-simulation/notebooks/: 01_simulation_scenario_analysis.ipynb
projects/robotic-warehouse-simpy-simulation/reports/: demand_stress_test.csv  dispatch_policy_comparison.csv  executive_summary.md  fleet_size_sweep.csv  historical_kpi_validation_error.csv  scenario_summary.csv  synthetic_historical_kpis.csv
projects/robotic-warehouse-simpy-simulation/src/warehouse_sim/: __init__.py  calibration.py  config.py  entities.py  experiments.py  layout.py  policies.py  simulation.py
projects/robotic-warehouse-simpy-simulation/tests/: test_calibration.py  test_config.py  test_experiments.py  test_layout_and_policies.py  test_simulation.py
projects/simulation-calibration-ml/: README.md
projects/warehouse-digital-twin-scenario-planner/: README.md
projects/warehouse-rl-dispatching-agent/: README.md
